--- a/Client/src/pages/Books/Books.css
+++ b/Client/src/pages/Books/Books.css
@@ -4,7 +4,7 @@
     padding-left: 40px;
     padding-right: 40px;
     font-size: 1.4rem;
-    padding-bottom: 50px;
+    padding-bottom: 100px;
   }
 
 .books-container h2 {
@@ -54,6 +54,7 @@
     margin-top: 10px;
     font-family: 'Source Sans 3', sans-serif; 
     font-size: 18px;
+    color: #7265B8; 
     text-decoration: none; 
     cursor: pointer;
     width: 145px; /* same width as the cover */
@@ -78,17 +79,74 @@
     cursor: pointer;
     display: inline-block;
     font-family: 'Montserrat', sans-serif; 
-    font-size: 16px;
+    font-size: 18px;
     font-weight: 500;
-    height: 40px;
+    height: 45px;
     line-height: 20px;
-    padding: 10px 16px;
+    padding: 12px 18px;
     transition: color 100ms;
     vertical-align: baseline;
     touch-action: manipulation;
-  }
+}
   
-  .book-button:hover,
-  .book-button:focus {
+.book-button:hover,
+.book-button:focus {
     background-color: #B4EA5D;
+}
+
+.button-container {
+    display: flex;
+    justify-content: center;
+    gap: 20px; /* space between buttons */
+    margin-bottom: 20px; /* space below the buttons */
+}
+
+.book-info {
+    border-collapse: collapse;
+    font-family: 'Source Sans 3', sans-serif; 
+    font-size: 1.5rem;
+    min-width: 400px;
+}
+
+.member-name {
+    font-family: 'Source Sans 3', sans-serif; 
+    font-size: 1.5rem;
+    color: #7265B8; 
+    text-decoration: none; 
+    cursor: pointer;
+}
+
+.member-name:hover {
+    text-decoration: underline; 
+}
+
+select {
+    margin-right: 20px;
+    margin-bottom: 30px;
+    width: 225px;
+    padding: 5px 35px 5px 5px;
+    font-family: 'Montserrat', sans-serif; 
+    font-size: 1.2rem;
+    border: 1px solid #CCC;
+    height: 45px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background: url("../../../public/arrow.png") 96% / 11% no-repeat #EEE;
   }
+
+.title-select {
+    margin-right: 20px;
+    margin-bottom: 30px;
+    width: 650px;
+    padding: 5px 35px 5px 5px;
+    font-family: 'Montserrat', sans-serif; 
+    font-size: 1.2rem;
+    border: 1px solid #CCC;
+    height: 45px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background: url("../../../public/arrow.png") 96% / 4% no-repeat #EEE;
+}
+  
